tests/ui/parser/misspelled-keywords/let.rs
fn main() {
    Let a = 10;
    //~^ ERROR expected one of
}

fn code() {
    lett a = 10;
    //~^ ERROR expected one of
}
